# JPB-vendingMachine

./: CMakeLists.txt  Makefile  README.md
includes/: CashManager.hpp  InputsManager.hpp  InventoryManager.hpp  Product.hpp  VendingMachineCore.hpp
sources/: CashManager.cpp  InputsManager.cpp  InventoryManager.cpp  Product.cpp  VendingMachineCore.cpp  main.cpp
